<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillCitationFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/fillVehicleMake"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/FillCitationVehicleMake"
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fillVehicleModel"
        app:layout_constraintTop_toBottomOf="@+id/fillVehicleColor" />

    <Button
        android:id="@+id/fillSavePrintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/rounded_button"
        android:text="@string/FillCitationSaveAndPrint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toEndOf="@+id/fillCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/fillNotes" />


    <Spinner
        android:id="@+id/fillChooseLotSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/parkingLots"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/fillTextPlateNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillOfficerID" />

    <EditText
        android:id="@+id/fillVehicleColor"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/FillCitationVehicleColor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fillChooseTheStateSpinner"
        app:layout_constraintTop_toBottomOf="@+id/fillTextPlateNumber" />

    <EditText
        android:id="@+id/fillTextPlateNumber"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/FillCitationPlateNumber"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fillChooseLotSpinner"
        app:layout_constraintTop_toBottomOf="@+id/fillOfficerID" />

    <EditText
        android:id="@+id/fillOfficerID"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="126dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/FillCitationOfficerID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fillChooseTheStateSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/states"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toStartOf="@+id/fillVehicleColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillChooseLotSpinner" />

    <EditText
        android:id="@+id/fillVehicleModel"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/FillCitationVehicleModel"
        android:inputType="textPersonName|text"
        app:layout_constraintEnd_toStartOf="@+id/fillVehicleMake"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillChooseTheStateSpinner" />

    <TextView
        android:id="@+id/fillAddCitations"
        android:layout_width="284dp"
        android:layout_height="67dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/FillCitationAddCitations"
        android:padding="12dp"
        app:drawableEndCompat="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillVehicleModel" />

    <Button
        android:id="@+id/fillCancelButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="76dp"

        android:text="@string/FillCitationCancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fillSavePrintButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillNotes"
        style="?attr/materialButtonOutlinedStyle"
        />

    <EditText
        android:id="@+id/fillNotes"
        android:layout_width="284dp"
        android:layout_height="67dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/FillCitationNotesHint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillAddCitations"
        app:layout_constraintVertical_bias="0.533" />

</androidx.constraintlayout.widget.ConstraintLayout>