...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualEntryFragment">

    <Button
        android:id="@+id/manualSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_marginStart="144dp"
        android:layout_marginBottom="196dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.AppCompat.Spinner.Underlined" />
        <!--TODO: make spinner hint. This requires and ArrayAdapter to override getView(). -->

    <EditText
        android:id="@+id/plateSearch"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="64dp"
        android:fadeScrollbars="false"
        android:hint="@string/plateNumber"
...
